--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -4,6 +4,14 @@
   <groupId>org.example</groupId>
   <artifactId>untitled</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.16.1</version>
+    </dependency>
+  </dependencies>
   <name>Archetype - untitled</name>
   <url>http://maven.apache.org</url>
 </project>
