--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -4,6 +4,10 @@
   <groupId>org.example</groupId>
   <artifactId>untitled</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
+  </properties>
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <dependency>
