--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -15,6 +15,19 @@
       <artifactId>selenium-java</artifactId>
       <version>4.16.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.9.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <name>Archetype - untitled</name>
   <url>http://maven.apache.org</url>
